# hedit

src/: hedit.sln
src/hedit/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  ViewModel.cs  hedit.csproj
src/hedit/Properties/: AssemblyInfo.cs
src/heditcontrol/: DeviceResources.cpp  DeviceResources.h  DirectXHelper.h  DocPage.cpp  DocPage.h  FontResources.cpp  FontResources.h  GraphicsMain.cpp  GraphicsMain.h  GraphicsRenderer.cpp  GraphicsRenderer.h  HeditControl.xaml  HeditControl.xaml.cpp  HeditControl.xaml.h  Sprite.cpp  Sprite.h  TextDocument.cpp  TextDocument.h  TextDocumentView.h  heditcontrol.vcxproj  heditcontrol.vcxproj.filters  pch.h
src/heditcontrol/Generated Files/: HeditControl.g.h  HeditControl.g.hpp  HeditControl.xaml  HeditControl.xbf  (+2 more)
src/heditexp/: App.xaml  App.xaml.cpp  App.xaml.h  DWExp.cpp  DWExp.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  heditexp.vcxproj  heditexp.vcxproj.filters  pch.h
src2/: hedit.sln
src2/hedit.app/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  hedit.app.csproj
src2/hedit.control/: Document.cpp  Document.h  DocumentVisualRect.cpp  DocumentVisualRect.h  DocumentVisualTile.cpp  DocumentVisualTile.h  HeditBox.xaml  HeditBox.xaml.cpp  HeditBox.xaml.h  TextCorePart.cpp  TextCorePart.h  Utils.h  hedit.control.vcxproj  hedit.control.vcxproj.filters  pch.h
text/: CMakeLists.txt
text/console/: CMakeLists.txt  main.cpp
text/libtext/: CMakeLists.txt
text/libtext/inc/: displayblock.hpp  stringblock.hpp  stringpool.hpp  text.hpp  textdoc.hpp  textline.hpp  textmem.hpp
text/tests/: CMakeLists.txt  stringblock-tests.cpp  test-utils.hpp  textdoc-tests.cpp
(+22 files in other folders)
